--- a/README.rdoc
+++ b/README.rdoc
@@ -123,8 +123,11 @@ https://www.stanford.edu/academics/ 部分加载
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
+=======================================================
+todo list:
+register and login
+rich text edit
+upload image
 
 
 
